--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@
 VITE_API_BASE_URL=https://waflyscreen.megascale.co.in/
 
 VITE_RECAPTCHA_SITE_KEY=6Ld0mdorAAAAAEixnbZTsJyfk-TDGFnkOGO8ZKbU
-
+#  VITE_RECAPTCHA_SITE_KEY=6LeT0OorAAAAAJVm5pVu0Teq47krqOIa38LMeO6Q  local
